log
Thu 09 Mar 2023 03:54:41 PM UTC: 
 exercises.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
 tests:  0|7
total_score: 0/70
99a8040
Fri 10 Mar 2023 11:53:12 AM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:16:7: error: unused variable ‘aux’ [-Werror=unused-variable]
   16 |   int aux= *a;
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
1046ae0
Fri 10 Mar 2023 11:53:26 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
8e36c83
Fri 10 Mar 2023 12:04:54 PM UTC: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c:29:30: error: unknown type name ‘cons’; did you mean ‘const’?
   29 | int cmp (const void *pivote, cons void *element)
      |                              ^~~~
      |                              const
exercises.c: In function ‘arrayMaxMin’:
exercises.c:42:25: error: ‘cmp’ undeclared (first use in this function); did you mean ‘bcmp’?
   42 |   qsort(a,n,sizeof(int),cmp)
      |                         ^~~
      |                         bcmp
exercises.c:42:25: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
34b4212
